src/test/deca/codegen/invalid/intermediaire2/arithmetiques/05multUnderflow.deca
// Description:
//    Programme test l'erreur underflow pour multiplication avec la limité coté erreur (limite à 0x1.0p-150)
//
// Resultats:
//    Error: Underflow
//
// Historique:
//    cree le 15/06/2022
{
    float a = 0.5;
    float b = 0x1.0p-149;
    float c = a*b;
    println(c);
}